--- a/style.css
+++ b/style.css
@@ -83,3 +83,10 @@ html,body{
 .book-img{
   background-color: black;
 }
+.book-details{
+  display:grid;
+  grid-template-rows: repeat(4,1fr);
+}
+.title{
+  justify-self: center;
+}
