--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ html,body{
   display:grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-flow: column;
+  gap:0px;
 }
 .book-img{
   background-color: black;
@@ -86,7 +87,14 @@ html,body{
 .book-details{
   display:grid;
   grid-template-rows: repeat(4,1fr);
+  padding: 5px 10px;
+  
 }
 .title{
   justify-self: center;
+}
+.book-details div{
+  display:grid;
+  grid-auto-flow: column;
+  grid-template-columns: fit-content(100%) 1fr;
 }
