--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 html,body{
   height: 100%;
+  font-family: 'roboto' , sans-serif ;
 }
 
 
@@ -59,12 +60,17 @@ html,body{
 
 }
 
-.getinfo-content{
 
+.getinfo-content{
   background-color: aqua;
+
+  display: grid;
 }
+
+
+/* book display section */
 .display-content{
- background-color: grey;
+
  padding: 60px 0px;
  margin-left: 30px;
  max-width: 100%;
@@ -76,6 +82,9 @@ html,body{
 }
 .book-content{
   background-color: antiquewhite;
+  border: 3px solid black;
+  border-radius: 10px;
+
   display:grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-flow: column;
@@ -83,6 +92,7 @@ html,body{
 }
 .book-img{
   background-color: black;
+  margin: 1.5%;
 }
 .book-details{
   display:grid;
