--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 /*
@@ -22,89 +24,130 @@ body {
 /*
   5. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 /*
   6. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 /*
   7. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 /*
   8. Create a root stacking context
 */
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
 
-
-html,body{
+html,
+body {
   height: 100%;
-  font-family: 'roboto' , sans-serif ;
+  font-family: "roboto", sans-serif;
+}
+body {
+  max-height: 100%;
+  min-height: 100%;
 }
 
-
-
-.content{
+.content {
   height: 100%;
-  display:grid;
-  grid-template-columns: minmax(200px,1fr) minmax(1000px,4fr);
-
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr) minmax(1000px, 4fr);
 }
 
-
-.getinfo-content{
+.getinfo-content {
   background-color: aqua;
 
   display: grid;
+  align-content: center;
+  justify-content: center;
+  gap: 30px
 }
+ul {
+  list-style-type: none;
+  display: grid;
 
+  gap:90px;
+  padding: 60px 0;
+  justify-content: center;
+}
+li {
+  display: grid;
+  gap:10px
+}
+li label {
+  justify-self: center;
+  font-size: 2rem;
+  font-weight:700;
+}
+li input{
+  display: inline-block;
+}
+.pages{
+  max-width: 190px;
+  text-align: center;
+  line-height: 1;
+}
 
 /* book display section */
-.display-content{
-
- padding: 60px 0px;
- margin-left: 30px;
- max-width: 100%;
-
- display:grid;
- grid-template-columns: repeat(auto-fit,400px);
- grid-template-rows: repeat(3, minmax(200px, 1fr));
- gap: 30px;
+.display-content {
+  margin-left: 30px;
+  max-width: 100%;
+  max-height: 100vh;
+  gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 400px);
+  grid-template-rows: repeat(3, minmax(200px, 1fr));
 }
-.book-content{
+.book-content {
   background-color: antiquewhite;
   border: 3px solid black;
   border-radius: 10px;
 
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-flow: column;
-  gap:0px;
 }
-.book-img{
+.book-img {
   background-color: black;
   margin: 1.5%;
 }
-.book-details{
-  display:grid;
-  grid-template-rows: repeat(4,1fr);
-  padding: 5px 10px;
-  
+.book-img img{
+  max-height: 0px;
+  border-radius: 20px;
 }
-.title{
+.book-details {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  padding: 5px 10px;
+}
+.title {
   justify-self: center;
 }
-.book-details div{
-  display:grid;
+.book-details div {
+  display: grid;
   grid-auto-flow: column;
   grid-template-columns: fit-content(100%) 1fr;
 }
